# Python

./: README.md
Python/: CMakeCache.txt  CMakeLists.txt  Makefile  Python  cmake_install.cmake
Python/.cache/clangd/index/: CellClass.h.4DA68F6A81B8CD44.idx  DefaultFunctions.h.1C0F2D637BE70D8B.idx  DrawingFunctions.h.270B3F1220BBF74F.idx  FieldClass.h.0A7504B9BA98DDB4.idx  GameInfo.h.07DC5014550D8B6C.idx  PlayerClass.h.8F62E14153E7EF67.idx  ProcessingFunctions.h.FEF1EEF87A24A5E2.idx  Python.cpp.3347CE5B01DF617A.idx  SnakeClass.h.42CB54C492E217E6.idx  fileForLink.h.F9993922385F5501.idx  functionsFullProject.h.E60C15D7356FB051.idx
Python/include/: BotClass.h  CellClass.h  DefaultFunctions.h  DrawingFunctions.h  FieldClass.h  GameInfo.h  PlayerClass.h  PlayerInfo.h  ProcessingFunctions.h  SnakeClass.h  fileForLink.h  functionsFullProject.h
Python/src/: DrawingFunctions.h  GameInfo.h  ProcessingFunctions.h  Python.cpp  Python.h
code/: README.md  pythonReady.cpp
